--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon in dex.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/multer": "^3.0.2",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "koa-body": "^6.0.1",
+    "koa-cors": "^0.0.16",
+    "koa-router": "^12.0.0",
+    "koa2-cors": "^2.0.6",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
 }
