--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@koa/multer": "^3.0.2",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -27,6 +30,8 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
+    "validator": "^13.9.0"
   }
 }
