--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koa-cors": "^0.0.16",
     "koa-router": "^12.0.0",
     "koa2-cors": "^2.0.6",
+    "memory-cache": "^0.2.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
