--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
+    "sslcommerz-lts": "^1.1.0",
     "validator": "^13.9.0"
   }
 }
